[metadata]
name = v5009cm
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires =
  pyserial

[options.packages.find]
include = v5009cm*

[options.entry_points]
gui_scripts =
  v5009cm = v5009cm.v5009cm:main
